--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -1,5 +1,5 @@
 {
-  "navbar": {
+  "header": {
     "search": {
       "placeholder": "بتدور علي ايه؟"
     },
@@ -9,5 +9,34 @@
       "logout": "تسجيل الخروج"
     },
     "cartButton": "طلباتك"
+  },
+  "nav": [
+    "تصنيف",
+    "تصنيف",
+    "تصنيف",
+    "تصنيف",
+    "تصنيف",
+    "تصنيف",
+    "تصنيف",
+    "تصنيف",
+    "تصنيف",
+    "تصنيف"
+  ],
+  "home": {
+    "ourMenu": { "title": "قائمة الطعام" },
+    "mostOrdered": "ألاكثر طلبا"
+  },
+  "footer": {
+    "motto": "شركة روعة للتغذية الصحية",
+    "CR-No": "رقم التسجيل الضريبى",
+    "VAT-No": "الرقم الضريبى",
+    "onYourMobile": "أطلب أينما كنت",
+    "explore": "أكتشف روعة",
+    "ourPromise": "عهدنــا",
+    "about-us": "نبذة عن الشركة",
+    "policy": "سياسة الخصوصية",
+    "conditions": "الشروط والاحكام",
+    "contact-us": "تواصل معنا",
+    "locations": "فروعنا"
   }
 }
